--- a/index.html
+++ b/index.html
@@ -1549,7 +1549,7 @@
       </script> <script>window.upmenuSettings = {
          id: "973d6c74-db53-11e8-9a97-525400080321"
          };
-      </script> <script src=media/upmenu-widget.js></script>  <script>var _paq = window._paq || [];
+      </script> <script src=media/upmenu-widget.js></script>  <!--script>var _paq = window._paq || [];
          /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
          _paq.push(['trackPageView']);
          _paq.push(['enableLinkTracking']);
@@ -1560,7 +1560,7 @@
            var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
            g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
          })();
-      </script>  <script>function revslider_showDoubleJqueryError(sliderID) {
+      </script-->  <script>function revslider_showDoubleJqueryError(sliderID) {
          var errorMessage = "Revolution Slider Error: You have some jquery.js library include that comes after the revolution files js include.";
          errorMessage += "<br> This includes make eliminates the revolution slider libraries, and make it not work.";
          errorMessage += "<br><br> To fix it you can:<br>&nbsp;&nbsp;&nbsp; 1. In the Slider Settings -> Troubleshooting set option:  <strong><b>Put JS Includes To Body</b></strong> option to true.";
