--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                         href=wp/berg-wp5/home-fullscreen-columns-navigation/>Fullscreen Columns Navigation</a></li>
                   </ul>
                </li>
-               <li
+               <!--li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-19"><a
                   href=wp/berg-wp5/about/>About</a></li>
                <li
@@ -290,7 +290,7 @@
                   href=wp/berg-wp5/team/>Team</a></li>
                <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17"><a
-                  href=wp/berg-wp5/blog/>Blog</a></li>
+                  href=wp/berg-wp5/blog/>Blog</a></li-->
                <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1060"><a
                   href=wp/berg-wp5/contact/>Contact</a></li>
@@ -1493,7 +1493,7 @@
                            </ul>
                         </div>
                      </li>
-                     <li
+                     <!--li
                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-19"><a
                         href=wp/berg-wp5/about/>About</a></li>
                      <li
@@ -1510,7 +1510,7 @@
                         href=wp/berg-wp5/team/>Team</a></li>
                      <li
                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17"><a
-                        href=wp/berg-wp5/blog/>Blog</a></li>
+                        href=wp/berg-wp5/blog/>Blog</a></li-->
                      <li
                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1060"><a
                         href=wp/berg-wp5/contact/>Contact</a></li>
