change in index

--- a/index.html
+++ b/index.html
@@ -1513,7 +1513,7 @@
                         href=wp/berg-wp5/blog/>Blog</a></li-->
                      <li
                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1060"><a
-                        href=wp/berg-wp5/contact/>Contact</a></li>
+                        href=contact.html/>Contact</a></li>
                   </ul>
                </div>
                <div
