--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                      href=wp/berg-wp5/blog/>Blog</a></li>
                   <li
                      id=menu-item-1060 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1060"><a
-                     href=wp/berg-wp5/contact/>Contact</a></li>
+                     href=contact.html/>Contact</a></li>
                </ul>
             </div>
             <div
@@ -293,7 +293,7 @@
                   href=wp/berg-wp5/blog/>Blog</a></li-->
                <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1060"><a
-                  href=wp/berg-wp5/contact/>Contact</a></li>
+                  href=contact.html/>Contact</a></li>
             </ul>
          </div>
       </div>
@@ -1543,7 +1543,7 @@
       <div
          class=paspartu_right></div>
       <a
-         class="floating-button floating-button-rounded nohover" href=wp/berg-wp5/contact/  ><i
+         class="floating-button floating-button-rounded nohover" href=contact.html/  ><i
          class="fa fa-book"></i></a> <script>var ajaxurl = 'wp/berg-wp5/wp-admin/admin-ajax.php';
          var pageId = '2343';
       </script> <script>window.upmenuSettings = {
