--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
          rel=canonical href='wp/berg-wp5/home-fast-food/'>
       <link
          rel=shortlink href='wp/berg-wp5/?p=2343'>
-      <!--link
+      <link
          rel=alternate type=application/json+oembed href="wp/berg-wp5/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fdemo.yosoftware.com%2Fwp%2Fberg-wp5%2Fhome-fast-food%2F">
       <link
          rel=alternate type=text/xml+oembed href="wp/berg-wp5/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fdemo.yosoftware.com%2Fwp%2Fberg-wp5%2Fhome-fast-food%2F&#038;format=xml"-->
@@ -165,22 +165,22 @@
                   </li>
                   <li
                      id=menu-item-19 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-19"><a
-                     href=wp/berg-wp5/about/>About</a></li>
+                     href=about.html>About</a></li>
                   <li
                      id=menu-item-20 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-20"><a
-                     href=wp/berg-wp5/menu/>Menu</a></li>
+                     href=menu.html>Menu</a></li>
                   <li
                      id=menu-item-16 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-16"><a
-                     href=wp/berg-wp5/reservation/>Reservation</a></li>
+                     href=reservation.html>Reservation</a></li>
                   <li
                      id=menu-item-18 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-18"><a
-                     href=wp/berg-wp5/gallery/>Gallery</a></li>
+                     href=gallery.html>Gallery</a></li>
                   <li
                      id=menu-item-1848 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1848"><a
-                     href=wp/berg-wp5/team/>Team</a></li>
+                     href=team.html>Team</a></li>
                   <li
                      id=menu-item-17 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17"><a
-                     href=wp/berg-wp5/blog/>Blog</a></li>
+                     href=blog.html>Blog</a></li>
                   <li
                      id=menu-item-1060 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1060"><a
                      href=contact.html>Contact</a></li>
@@ -273,24 +273,24 @@
                         href=wp/berg-wp5/home-fullscreen-columns-navigation/>Fullscreen Columns Navigation</a></li>
                   </ul>
                </li>
-               <!--li
+               <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-19"><a
-                  href=wp/berg-wp5/about/>About</a></li>
+                  href=about.html>About</a></li>
                <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-20"><a
-                  href=wp/berg-wp5/menu/>Menu</a></li>
+                  href=menu.html>Menu</a></li>
                <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-16"><a
-                  href=wp/berg-wp5/reservation/>Reservation</a></li>
+                  href=reservation.html>Reservation</a></li>
                <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-18"><a
-                  href=wp/berg-wp5/gallery/>Gallery</a></li>
+                  href=gallery.html>Gallery</a></li>
                <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1848"><a
-                  href=wp/berg-wp5/team/>Team</a></li>
+                  href=team.html>Team</a></li>
                <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17"><a
-                  href=wp/berg-wp5/blog/>Blog</a></li-->
+                  href=blog.html>Blog</a></li>
                <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1060"><a
                   href=contact.html>Contact</a></li>
@@ -1493,24 +1493,24 @@
                            </ul>
                         </div>
                      </li>
-                     <!--li
+                     <li
                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-19"><a
-                        href=wp/berg-wp5/about/>About</a></li>
+                        href=about.html>About</a></li>
                      <li
                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-20"><a
-                        href=wp/berg-wp5/menu/>Menu</a></li>
+                        href=menu.html>Menu</a></li>
                      <li
                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-16"><a
-                        href=wp/berg-wp5/reservation/>Reservation</a></li>
+                        href=reservation.html>Reservation</a></li>
                      <li
                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-18"><a
-                        href=wp/berg-wp5/gallery/>Gallery</a></li>
+                        href=gallery.html>Gallery</a></li>
                      <li
                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1848"><a
-                        href=wp/berg-wp5/team/>Team</a></li>
+                        href=team.html>Team</a></li>
                      <li
                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17"><a
-                        href=wp/berg-wp5/blog/>Blog</a></li-->
+                        href=blog.html>Blog</a></li>
                      <li
                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1060"><a
                         href=contact.html>Contact</a></li>
